ingress/ingress-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-demo
spec:
  selector:
    matchLabels:
      app: myapp
  replicas: 1
  template: # create pod
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: ingress-cont
        image: gcr.io/google-samples/hello-app:1.0
        ports:
          - containerPort: 8080
            name: cont-http
