ingress/ingress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-test-svc
spec:
  ports:
  - port: 8080
    targetPort: cont-http
    #nodePort: 30033
    protocol: TCP
    name: http
  selector:
    app: myapp
  #type: NodePort
